--- a/src/assets/sass/abstracts/_variables.scss
+++ b/src/assets/sass/abstracts/_variables.scss
@@ -4,6 +4,8 @@ $black: #2c2c2c;
 $orange: #ff7b1b;
 $lightRed: #f08080;
 $blue: #1a5cff;
+$selectSidebarBg: #ececec;
+$appsSidebarTitle: #999999;
 
 // FONT WEIGHT
 $light: 300;
