--- a/src/assets/sass/base/_reset.scss
+++ b/src/assets/sass/base/_reset.scss
@@ -10,6 +10,7 @@ body {
   height: 100vh;
   -webkit-font-smoothing: antialiased !important;
   color: #2c2c2c;
+  font-family: 'Montserrat', sans-serif;
 }
 
 html {
